// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageService plugin #getCodeFixes should return codeFixes reported by ESLint rules 1`] = `
{
  "body": [
    {
      "changes": [
        {
          "fileName": "<fileName>",
          "textChanges": [
            {
              "end": {
                "line": 1,
                "offset": 12,
              },
              "newText": ";",
              "start": {
                "line": 1,
                "offset": 12,
              },
            },
          ],
        },
      ],
      "description": "Fix: Missing semicolon.",
      "fixId": "semi",
      "fixName": "<fileName>",
    },
  ],
  "command": "getCodeFixes",
  "request_seq": 2,
  "seq": 0,
  "success": true,
  "type": "response",
}
`;

exports[`LanguageService plugin #getSemanticDiagnostics should not reproduce issue #7 1`] = `
{
  "body": {
    "diagnostics": [],
    "file": "<file>",
  },
  "event": "semanticDiag",
  "seq": 0,
  "type": "event",
}
`;

exports[`LanguageService plugin #getSemanticDiagnostics should not reproduce issue 217 1`] = `
{
  "body": {
    "diagnostics": [
      {
        "category": "error",
        "code": 30010,
        "end": {
          "line": 2,
          "offset": 16,
        },
        "start": {
          "line": 2,
          "offset": 3,
        },
        "text": "[@typescript-eslint/await-thenable] Unexpected \`await\` of a non-Promise (non-"Thenable") value.",
      },
      {
        "category": "error",
        "code": 30010,
        "end": {
          "line": 6,
          "offset": 29,
        },
        "start": {
          "line": 6,
          "offset": 14,
        },
        "text": "[@typescript-eslint/no-implied-eval] Implied eval. Consider passing a function.",
      },
      {
        "category": "error",
        "code": 30010,
        "end": {
          "line": 10,
          "offset": 17,
        },
        "start": {
          "line": 10,
          "offset": 15,
        },
        "text": "[@typescript-eslint/no-base-to-string] '{}' will evaluate to '[object Object]' when stringified.",
      },
      {
        "category": "error",
        "code": 30010,
        "end": {
          "line": 15,
          "offset": 20,
        },
        "start": {
          "line": 15,
          "offset": 14,
        },
        "text": "[@typescript-eslint/dot-notation] ["prop"] is better written in dot notation.",
      },
      {
        "category": "error",
        "code": 30010,
        "end": {
          "line": 19,
          "offset": 37,
        },
        "start": {
          "line": 19,
          "offset": 15,
        },
        "text": "[@typescript-eslint/no-confusing-void-expression] Placing a void expression inside another expression is forbidden. Move it to its own statement instead.",
      },
    ],
    "file": "<file>",
  },
  "event": "semanticDiag",
  "seq": 0,
  "type": "event",
}
`;

exports[`LanguageService plugin #getSemanticDiagnostics should not return ESLint error when the project does not use @typescript-eslint/parser 1`] = `
{
  "body": {
    "diagnostics": [],
    "file": "<file>",
  },
  "event": "semanticDiag",
  "seq": 0,
  "type": "event",
}
`;

exports[`LanguageService plugin #getSemanticDiagnostics should return ESLint error when the project is configured with ESLint plugins 1`] = `
{
  "body": {
    "diagnostics": [
      {
        "category": "error",
        "code": 30010,
        "end": {
          "line": 2,
          "offset": 10,
        },
        "start": {
          "line": 2,
          "offset": 9,
        },
        "text": "[@typescript-eslint/no-unused-vars] 'a' is assigned a value but never used.",
      },
    ],
    "file": "<file>",
  },
  "event": "semanticDiag",
  "seq": 0,
  "type": "event",
}
`;

exports[`LanguageService plugin #getSemanticDiagnostics should return ESLint error when the project uses @typescript-eslint/parser 1`] = `
{
  "body": {
    "diagnostics": [
      {
        "category": "error",
        "code": 30010,
        "end": {
          "line": 1,
          "offset": 13,
        },
        "start": {
          "line": 1,
          "offset": 12,
        },
        "text": "[semi] Missing semicolon.",
      },
    ],
    "file": "<file>",
  },
  "event": "semanticDiag",
  "seq": 0,
  "type": "event",
}
`;

exports[`LanguageService plugin #getSemanticDiagnostics should return ESLint error when the project uses @typescript-eslint/parser and be configured with 'eslint:recommended' 1`] = `
{
  "body": {
    "diagnostics": [
      {
        "category": "error",
        "code": 30010,
        "end": {
          "line": 1,
          "offset": 10,
        },
        "start": {
          "line": 1,
          "offset": 1,
        },
        "text": "[no-debugger] Unexpected 'debugger' statement.",
      },
    ],
    "file": "<file>",
  },
  "event": "semanticDiag",
  "seq": 0,
  "type": "event",
}
`;
